# 100_days_of_code

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: ci.yml
day_00/: app.py
tests/unit/: test_day_00.py
